Added Resume Button

--- a/index.html
+++ b/index.html
@@ -169,9 +169,6 @@
 									<p>My current projects range from game development to hardware, and everything in between. 
 										Feel free to check out any of my current developments!
 									</p>
-									<footer>
-										<a href="#third" class="button scrolly">Check out my</a>
-									</footer>
 								</section>
 							</div>
 							<div class="col-8 col-12-narrow">
@@ -183,7 +180,13 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>				
+	</section>
+
+	<section id="fifth" class="main">
+		<header>
+			<a href="#" class="button scrolly">Check Out My Resume.</a>
+		</header>
 	</section>
 
 
