Added Separate Resume Page

--- a/index.html
+++ b/index.html
@@ -110,6 +110,28 @@
 			<div class="container">
 				<div class="timeline">
 					<div class="timeline__component">
+						<div class="timeline__position timeline__position--right">Yield and Process Integration Intern</div>
+						<div class="timeline__date timeline__date--right">Summer 2023</div>
+					</div>
+					<div class="timeline__middle">
+						<div class="timeline__point"></div>
+					</div>
+					<div class="timeline__component">
+						<h2 class="timeline__title"><a href="https://gf.com">GlobalFoundries</a></h2>
+						<p class="timeline__paragraph">
+							Incoming.
+						</p>
+						<!-- Full Description: Working on a medium-sized team, I led the development of standardized emergency
+									eye wash station inspections into Spot mobile robot missions through Python programming
+									and the Boston Dynamics API. I also developed a comprehensive training 
+									manual covering Python basics and basic mission implementation. I integrated and deployed 
+									demonstrations incorporating autonomous	pick-and-place with the Spot mobile robot created through 
+									evaluating a pre-trained machine learning model with the TensorFlow object detection API, 
+									LabelImg, NumPy, and Pandas. Within the sub-fabrication	environment, I designed testing methodology 
+									to document and evaluate 120 different blockage and interference types, as well as inspected pumps, 
+									blowers, and other support equipment. -->
+					</div>
+					<div class="timeline__component">
 						<div class="timeline__position timeline__position--right">Robotics and Automation Intern</div>
 						<div class="timeline__date timeline__date--right">Summer 2022</div>
 					</div>
@@ -173,8 +195,7 @@
 							</div>
 							<div class="col-8 col-12-narrow">
 								<div class="row">
-									<div class="col-6"><a href="https://github.com/onecholas/2048_PlusPlus" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<!-- <div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div> -->
+									<div class="col-4"><a href="https://github.com/onecholas/2048_PlusPlus" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
 								</div>
 							</div>
 						</div>
@@ -185,7 +206,7 @@
 
 	<section id="fifth" class="main">
 		<header>
-			<a href="#" class="button scrolly">Check Out My Resume.</a>
+			<a href="html/resume.html" class="button scrolly">Check Out My Resume.</a>
 		</header>
 	</section>
 
