Updated order of sections and extracurricular sections

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 					the rest of my portfolio!
 				</p>
 			</div>
+			<p></p>
+			<a href="html/resume.html" class="button scrolly">Check Out My Resume.</a>
 		</header>
 		<div class="content dark style1 featured">
 			<div class="container">
@@ -204,13 +206,80 @@
 			</div>				
 	</section>
 
-	<section id="fifth" class="main">
+	<!-- Fourth -->
+	<section id="third" class="main">
 		<header>
-			<a href="html/resume.html" class="button scrolly">Check Out My Resume.</a>
+			<div class="container">
+				<h2>Extracurricular Experience.</h2>
+				<p>Outside of school and work, my interests lie in anything from volunteer work to performing 
+					with an orchestra in front of crowds, to even relaxing with my friends by exploring the food scene 
+				    wherever we are.</p>
+			</div>
 		</header>
 	</section>
 
-
+	<!-- Fifth -->
+	<section id="fourth" class="main">
+		<div class="content dark style7">
+			<div class="container">
+				<div class="row">
+					<div class="col-1 col-12-narrow"></div>					
+					<div class="col-10 col-12-narrow">
+						<section>
+							<header>
+								<h4>Northwestern University Residential Services</h4>
+								<h6>Residential Assistant</h6>
+							</header>
+							<blockquote>• Led regular events at Ayers Residential College of Commerce and Industry</blockquote>
+							<blockquote>• Mentored incoming first-year students</blockquote>
+							<blockquote>• Facilitated positive interactions between peers</blockquote>
+						</section>
+						<section>
+							<header>
+								<h4>Northwestern University Financial Technologies Club</h4>
+								<h6>Core Developer</h6>
+							</header>
+							<blockquote>• Developed Python scripts to monitor server health</blockquote>
+							<blockquote>• Integrated Slack bot for custom alert system</blockquote>
+						</section>
+						<section>
+							<header>
+								<h4>Northwestern University IEEE Student Branch</h4>
+								<h6>Hardware Team Member</h6>
+							</header>
+							<blockquote>• TBA</blockquote>
+						</section>
+						<section>
+							<header>
+								<h4>Northwestern University HKN (Eta Kappa Nu)</h4>
+								<h6>Member</h6>
+							</header>
+							<blockquote>• Mentored students interested in Northwestern ECE</blockquote>
+						</section>
+						<section>
+							<header>
+								<h4>Northwestern University Taiwanese American Student Association</h4>
+								<h6>Member</h6>
+							</header>
+							<blockquote>• Set up quarterly events (e.g. Taiwanese Night Market, Celebrasia, etc.)</blockquote>
+							<blockquote>• Fostered community by participating in weekly meetings</blockquote>
+						</section>
+						<section>
+							<header>
+								<h4>Philharmonia Orchestra</h4>
+								<h6>Second Violin</h6>
+							</header>
+							<blockquote>• Performed at quarterly concerts with repotoire including Dvorak's 
+								8th Symphony to Tchaikovsky's 4th Symphony, and Beethoven's 5th Symphony
+							</blockquote>
+							<blockquote>• Assisted with set up of rehearsals</blockquote>
+						</section>
+					</div>
+					<!-- <div class="col-1 col-8-narrow"></div>	 -->
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!-- Footer -->
 	<section id="footer">
