--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="container">
 				<div class="timeline">
 					<div class="timeline__component">
-						<div class="timeline__position timeline__position--right">Yield and Process Integration Intern</div>
+						<div class="timeline__position timeline__position--right">Process Integration Intern</div>
 						<div class="timeline__date timeline__date--right">Summer 2023</div>
 					</div>
 					<div class="timeline__middle">
