--- a/html/resume.html
+++ b/html/resume.html
@@ -13,7 +13,7 @@
             <div class="content dark style6 featured">
                 <div class="container">
                     <section>
-                        <iframe src="/assets/Nicholas_Hsu_January_23.pdf    " width="71%" height="135%"></iframe>
+                        <iframe src="/assets/Nicholas_Hsu_July_23.docx    " width="71%" height="135%"></iframe>
                     </section>
                 </div>
             </div>
