Updated information and revised formatting

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
 	<!-- First -->
 	<section id="first" class="main">
 		<header>
-			<div class="container">
+			<div class="container" style="padding-bottom:3em;">
 				<h2>About Me.</h2>
-				<p>I'm a second-year at Northwestern University, on track to complete the Computer
-					Engineering BS/MS program by 2025. My interests lie primarily in hardware, but
+				<p>I'm a third-year at Northwestern University, on track to complete the Computer
+					Engineering B.S./M.S. program by 2025. My interests lie primarily in hardware, but
 					I love learning about anything and everything computing-related. Feel free to explore
 					the rest of my portfolio!
 				</p>
 			</div>
-			<p></p>
 			<a href="html/resume.html" class="button scrolly">Check Out My Resume.</a>
 		</header>
 		<div class="content dark style1 featured">
@@ -53,26 +52,23 @@
 							<header>
 								<h3>Education</h3>
 							</header>
-							<p>I'm currently studying towards my BS/MS in Computer Engineering at Northwestern
-								University. I've
-								currently taken courses in CMOS Circuit Design, Signals & Systems, and Solid State
-								Engineering.
+							<p>I'm currently finishing up my B.S. in Computer Engineering, set to start my 
+								M.S. in Computer Engineering by April 2024. I'm also interested in pursuing a doctorate
+								degree after the completion of my master's degree. I've currently taken courses in CMOS Circuit Design, 
+								Signals & Systems, AI, Computer Systems, and Solid State Engineering.
 							</p>
 						</section>
 					</div>
 					<div class="col-4 col-12-narrow">
 						<section>
-
 							<header>
 								<h3>Skillset</h3>
 							</header>
-							<p>I'm constantly improving on my technical skillset in both hardware and programming --
-								I have experience in Python, C/C++ and HTML. I've also had 5+
-								years of leadership experience, and always look forward to working on a team.
+							<p>I'm constantly improving on my technical skillset in both hardware and software --
+								I have experience in Python, Verilog, C/C++ and HTML. I've also had experience in structured
+								problem solving in semiconductor manufacturing, had 5+ years of leadership experience, and 
+								always look forward to working on a team.
 							</p>
-							<!-- <span class="feature-icon"><img src="images/c++resize.png"></span></span> -->
-							<!-- <span class="feature-icon"></span> -->
-							<!-- <img src="images/c++resize.png"></span> -->
 						</section>
 					</div>
 					<div class="col-4 col-12-narrow">
@@ -81,9 +77,11 @@
 							<header>
 								<h3>Interests</h3>
 							</header>
-							<p>More personally, I love playing and watching basketball, weightlifting,
-								playing the violin, skiing during the winter, and building computers for
-								friends whenever I get the chance!
+							<p>More personally, I love playing and watching 
+								basketball, weightlifting, playing the violin, skiing during the winter, 
+								and building computers for friends whenever I get the chance. I'm also a huge
+								foodie so wherever I am, you can bet that I'm trying all of the restaurants
+								that I can!
 							</p>
 						</section>
 					</div>
@@ -99,9 +97,11 @@
 		<header>
 			<div class="container">
 				<h2>Technical and Work Experience.</h2>
-				<p>I've worked in both a semiconductor fabrication plant and an early-stage startup, with roles related
-					to robotics (programming, deployment, and implementation). In the future, I hope to work in hardware
-					verification and design, specifically in chip architecture.</p>
+				<p>I've worked in a semiconductor fab and an early-stage startup, with roles related
+					to robotics (programming, deployment, and implementation) and process integration.
+					In the future, I hope to work in hardware verification or design, but I'm open
+					to all opportunities to learn about semiconductors!
+				</p>
 			</div>
 		</header>
 	</section>
@@ -121,17 +121,11 @@
 					<div class="timeline__component">
 						<h2 class="timeline__title"><a href="https://gf.com">GlobalFoundries</a></h2>
 						<p class="timeline__paragraph">
-							Incoming.
+							Supported FEOL and BEOL Integration teams in in-line wafer defect monitoring and G85 wafer mapping, 
+							standardized multiple 350 nm wafer flows using structured problem solving through developing FMEAs and 
+							running experiments.
 						</p>
-						<!-- Full Description: Working on a medium-sized team, I led the development of standardized emergency
-									eye wash station inspections into Spot mobile robot missions through Python programming
-									and the Boston Dynamics API. I also developed a comprehensive training 
-									manual covering Python basics and basic mission implementation. I integrated and deployed 
-									demonstrations incorporating autonomous	pick-and-place with the Spot mobile robot created through 
-									evaluating a pre-trained machine learning model with the TensorFlow object detection API, 
-									LabelImg, NumPy, and Pandas. Within the sub-fabrication	environment, I designed testing methodology 
-									to document and evaluate 120 different blockage and interference types, as well as inspected pumps, 
-									blowers, and other support equipment. -->
+						<!-- Full Description: This is the full description LOL-->
 					</div>
 					<div class="timeline__component">
 						<div class="timeline__position timeline__position--right">Robotics and Automation Intern</div>
@@ -212,8 +206,7 @@
 			<div class="container">
 				<h2>Extracurricular Experience.</h2>
 				<p>Outside of school and work, my interests lie in anything from volunteer work to performing 
-					with an orchestra in front of crowds, to even relaxing with my friends by exploring the food scene 
-				    wherever we are.</p>
+					with an orchestra in front of crowds, to furthering Taiwanese culture!</p>
 			</div>
 		</header>
 	</section>
@@ -221,62 +214,65 @@
 	<!-- Fifth -->
 	<section id="fourth" class="main">
 		<div class="content dark style7">
-			<div class="container">
-				<div class="row">
-					<div class="col-1 col-12-narrow"></div>					
-					<div class="col-10 col-12-narrow">
-						<section>
-							<header>
-								<h4>Northwestern University Residential Services</h4>
-								<h6>Residential Assistant</h6>
-							</header>
-							<blockquote>• Led regular events at Ayers Residential College of Commerce and Industry</blockquote>
-							<blockquote>• Mentored incoming first-year students</blockquote>
-							<blockquote>• Facilitated positive interactions between peers</blockquote>
-						</section>
-						<section>
-							<header>
-								<h4>Northwestern University Financial Technologies Club</h4>
-								<h6>Core Developer</h6>
-							</header>
-							<blockquote>• Developed Python scripts to monitor server health</blockquote>
-							<blockquote>• Integrated Slack bot for custom alert system</blockquote>
-						</section>
-						<section>
-							<header>
-								<h4>Northwestern University IEEE Student Branch</h4>
-								<h6>Hardware Team Member</h6>
-							</header>
-							<blockquote>• TBA</blockquote>
-						</section>
-						<section>
-							<header>
-								<h4>Northwestern University HKN (Eta Kappa Nu)</h4>
-								<h6>Member</h6>
-							</header>
-							<blockquote>• Mentored students interested in Northwestern ECE</blockquote>
-						</section>
-						<section>
-							<header>
-								<h4>Northwestern University Taiwanese American Student Association</h4>
-								<h6>Member</h6>
-							</header>
-							<blockquote>• Set up quarterly events (e.g. Taiwanese Night Market, Celebrasia, etc.)</blockquote>
-							<blockquote>• Fostered community by participating in weekly meetings</blockquote>
-						</section>
-						<section>
-							<header>
-								<h4>Philharmonia Orchestra</h4>
-								<h6>Second Violin</h6>
-							</header>
-							<blockquote>• Performed at quarterly concerts with repotoire including Dvorak's 
-								8th Symphony to Tchaikovsky's 4th Symphony, and Beethoven's 5th Symphony
-							</blockquote>
-							<blockquote>• Assisted with set up of rehearsals</blockquote>
-						</section>
-					</div>
-					<!-- <div class="col-1 col-8-narrow"></div>	 -->
-				</div>
+			<div class="container" style="width:55%">
+				<section>
+					<header>
+						<h4>Northwestern University Residential Services</h4>
+						<h6>Residential Assistant</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Led regular events at Ayers Residential College of Commerce and Industry, 
+						mentored incoming first-year students, facilitated positive interactions between peers.
+					</p>
+				</section>
+				<section>
+					<header>
+						<h4>Northwestern University Financial Technologies Club</h4>
+						<h6>Core Developer</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Developed Python scripts to monitor server health, integrated Slack bot for custom alert system.
+					</p>
+				</section>
+				<!-- <section>
+					<header>
+						<h4>Northwestern University IEEE Student Branch</h4>
+						<h6>Hardware Team Member</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Developed 
+					</p>
+				</section> -->
+				<section>
+					<header>
+						<h4>Northwestern University HKN (Eta Kappa Nu)</h4>
+						<h6>Member</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Mentored students interested in Northwestern ECE.
+					</p>
+				</section>
+				<section>
+					<header>
+						<h4>Northwestern University Taiwanese American Student Association</h4>
+						<h6>Secretary</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Set up quarterly events (e.g. Taiwanese Night Market, Celebrasia, etc.), 
+						fostered community by participating in weekly meetings.
+					</p>
+				</section>
+				<section>
+					<header>
+						<h4>Philharmonia Orchestra</h4>
+						<h6>Second Violin</h6>
+					</header>
+					<p style="font-size: smaller; line-height:150%;">
+						Performed at quarterly concerts with repotoire including Dvorak's 
+						8th Symphony to Tchaikovsky's 4th Symphony, as well as Beethoven's 5th Symphony,
+						assisted with set up of rehearsals.
+					</p>
+				</section>
 			</div>
 		</div>
 	</section>
