Updated projects section and fixed styling

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
 							<div class="col-8 col-12-narrow">
 								<div class="row">
 									<div class="col-4"><a href="https://github.com/onecholas/2048_PlusPlus" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="https://github.com/onecholas/brickbreaker" class="image fit"><img src="images/brickbreaker.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="https://github.com/onecholas/skimonitor" class="image fit"><img src="images/SkiMonitor.jpg" alt="" /></a></div>
+
 								</div>
 							</div>
 						</div>
